--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,13 @@
     "ionicons": "5.1.2",
     "jquery-timepicker": "1.3.3",
     "magnific-popup": "1.1.0",
+    "node-sass": "^4.0.0",
     "owl.carousel": "2.3.4",
     "react": "16.13.1",
     "react-bootstrap": "1.3.0",
     "react-dom": "16.13.1",
     "react-router-dom": "5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^4.0.0",
     "we-theme-default": "0.3.4"
   },
   "devDependencies": {
