--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "mysql": "2.18.1"
+    "axios": "0.21.0",
+    "express": "4.17.1",
+    "mysql": "2.18.1",
+    "react-player": "2.7.0",
+    "sha1": "1.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
