--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
-  "name": "mt-mysql-node",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon backend/index.js"
+    "start": "node index.js"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "0.21.0",
-    "express": "4.17.1",
-    "mysql": "2.18.1",
-    "react-player": "2.7.0",
-    "sha1": "1.1.1"
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mysql": "^2.18.1",
+    "sha1": "^1.1.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.6"
   }
 }
